2003-11-28  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* tape-src/tapetype.c: extern int optind.
	* tape-src/tapeio.c: extern int optind.

2003-11-28  Jean-Louis Martineau <martineau@iro.umontreal.ca>
	Patch by C.Scheeder <christoph.scheeder@scheeder.de>

	* changer-src/sense.c (SenseType): Add "DAT AutoChanger" and "C1537A".

2003-11-27  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* server-src/driver.c: Print the tape size.
	* server-src/amstatus.pl.in: print % of tape use.

2003-11-26  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* server-src/conffile.c (copy_dumptype): Copy in/exclude only if seen.

2003-11-26  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* server-src/reporter.c (output_tapeinfo): Fix printing of new tape.

2003-11-25  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* server-src/amcheck.c (taperscan_slot): Deal with label not in
	  tapelist case.
	* server-src/amtape.c (taperscan_slot): Ditto.
	* server-src/taper.c (taperscan_slot): Ditto.

2003-11-24  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* server-src/driver.c (handle_taper_result): Always call
	  continue_dumps() in TRYAGAIN case.

2003-11-21  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* changer-src/chg-chio.pl.in (getTapeStatus): Set $drives[$num] to 0
	if no tape in drive.

2003-11-20  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* docs/Makefile.am (pkgdata_DATA): Add HOWTO-AFS.

2003-11-18  Jean-Louis Martineau <martineau@iro.umontreal.ca>
	Patch by Mitch Collinsworth <mitch@ccmr.cornell.edu>

	* client-src/selfcheck.c: Skip accessibility check for AFS entries.
	* docs/HOWTO-AFS: New file.

2003-11-07  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* server-src/amadmin.c (tape): Display the next new tapes.
	* server-src/reporter.c (output_tapeinfo): Ditto.

2003-10-31  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* docs/Makefile.am (pkgdata_DATA): Add chg-scsi.notes.
